test/corpus/macros.txt
===============================
'using' macro
===============================

using { /Github.com/Gost }

---

(source_file
  (macro_call
    (identifier)
    (body
      (path_literal))))

===============================
Macro call param
===============================

class (supertype) {}

---

(source_file
  (macro_call
    macro: (identifier)
    param: (identifier)
    (body)))
