test/corpus/operators.txt
===============================
'*' operator
===============================

1 * 1

---

(source_file
  (binary_expression
    (integer)
    (integer)))

===============================
'/' operator
===============================

1 / 1

---

(source_file
  (binary_expression
    (integer)
    (integer)))

===============================
'+' operator
===============================

1 + 1

---

(source_file
  (binary_expression
    (integer)
    (integer)))

===============================
'-' operator
===============================

1 - 1

---

(source_file
  (binary_expression
    (integer)
    (integer)))

===============================
'=' operator
===============================

1 = 1

---

(source_file
  (binary_expression
    (integer)
    (integer)))

===============================
'<>' operator
===============================

1 <> 1

---

(source_file
  (binary_expression
    (integer)
    (integer)))

===============================
'<' operator
===============================

1 < 1

---

(source_file
  (binary_expression
    (integer)
    (integer)))

===============================
'>' operator
===============================

1 > 1

---

(source_file
  (binary_expression
    (integer)
    (integer)))


===============================
'<=' operator
===============================

1 <= 1

---

(source_file
  (binary_expression
    (integer)
    (integer)))

===============================
'>=' operator
===============================

1 <= 1

---

(source_file
  (binary_expression
    (integer)
    (integer)))

===============================
'and' operator
===============================

1 and 1

---

(source_file
  (binary_expression
    (integer)
    (integer)))

===============================
'or' operator
===============================

1 or 1

---

(source_file
  (binary_expression
    (integer)
    (integer)))

===============================
'to' operator
===============================

1 to 1

---

(source_file
  (binary_expression
    (integer)
    (integer)))

===============================
Named operator/function conflict
===============================

1 and ()
1 and (1)

---

(source_file
  (binary_expression
    (integer)
    (unit))
  (binary_expression
    (integer)
    (integer)))
